--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
        url('./fonts/inter-v12-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
        url('./fonts/inter-v12-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
+@media (max-width: 991px) {
+  .white-intro {color: white; }
+}
 </style>
 
   </head>
@@ -110,7 +112,7 @@
 
 <div class="col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
   <h1 class="display-1 fw-bold mt-5">Welcome to Surf Club</h1>
-  <div class="row">
+  <div class="row white-intro">
     <div class="col-lg-7">
       <p class="lead ">Come Surf With Us! </p>
       <p>Humboldt County Family focused surf club </p>
