--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="row">
 
 <div class="col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
-  <h1 class="display-1 fw-bold mt-5">Welcome to Surf Club</h1>
+  <h1 class="display-1 fw-bold mt-5 white-intro">Welcome to Surf Club</h1>
   <div class="row white-intro">
     <div class="col-lg-7">
       <p class="lead ">Come Surf With Us! </p>
