--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <p>We believe lasting impact happens when families and communities learn and grow together.</p>
   <p>Our club invites parents and caregivers to be active partners—whether helping in the water, supporting logistics, or exploring shared learning at home. After-school surf programs are 100% volunteer led.</p>
   <p>Through regular community events and hands-on service projects, beach clean ups, we foster stewardship, strengthen relationships, and inspire collective care for our coastline and each other.</p>
-
+  <p>We have a strong commitment to diversity, equity, and inclusion; we aime to make this program avaible to anyone regardless of socio-economic status ensuring equitable access to all.  </p>
 
 </div>
 
