modify SEL and Ocean Saftey content

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       <p>Humboldt County Family focused surf club </p>
       <p>Programs grounded in ocean safety, marine education, social-emotional learning, and cultural connection. </p>
       <p>Harnessing the healing power of the ocean to support the physical, emotional, and social well-being of youth and families.</p>
+      <p>We have a strong commitment to diversity, equity, and inclusion; we aime to make this program avaible to anyone regardless of socio-economic status ensuring equitable access to all.  </p>
     </div>
    
   </div>
@@ -136,7 +137,7 @@
 <div class="py-vh-6 w-100 overflow-hidden" id="mission">
   <div class="container">
     <div class="row d-flex justify-content-center">
-<div class="col-lg-8" data-aos="fade-down"><h2 class="display-6">Inclusive, family-centered surf clubs that connect youth with the ocean, outdoor learning, and one another.</h2></div>
+<div class="col-lg-8" data-aos="fade-down"><h2 class="display-6">Inclusive, family-centered surf clubs that connect youth with the ocean, outdoor learning, and one another. </h2></div>
 </div>
 <div class="row d-flex align-items-center">
 <div class="col-md-6 col-lg-4 " data-aos="fade-up" data-aos-delay="200">
@@ -173,7 +174,7 @@
   <p>Our club invites parents and caregivers to be active partners—whether helping in the water, supporting logistics, or exploring shared learning at home. </p>
   <p>After-school surf programs are 100% volunteer led.</p>
   <p>Through regular community events and hands-on service projects, beach clean ups, we foster stewardship, strengthen relationships, and inspire collective care for our coastline and each other.</p>
-  <p>We have a strong commitment to diversity, equity, and inclusion; we aime to make this program avaible to anyone regardless of socio-economic status ensuring equitable access to all.  </p>
+  <!-- <p>We have a strong commitment to diversity, equity, and inclusion; we aime to make this program avaible to anyone regardless of socio-economic status ensuring equitable access to all.  </p> -->
 
 </div>
 
