modify SEL and Ocean Saftey content

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
   </p>
 
-  <p data-aos="fade-left" data-aos-delay="200">We encourage a Sunday Surf community build events.
+  <p data-aos="fade-left" data-aos-delay="200">We encourage a Weekly 'General Community' surf event.
 
   </p>
 
