modify SEL and Ocean Saftey content

--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
   </p>
 
   <p data-aos="fade-left" data-aos-delay="200">Concepts are introduced at home for discussion and exploration and then reviewed on the beach before putting those skills to use. 
-
+    Content should be completed each week. 
   </p>
 
-  <p data-aos="fade-left" data-aos-delay="200">Content should be completed each week. 
+  <!-- <p data-aos="fade-left" data-aos-delay="200">Content should be completed each week. 
 
-  </p>
+  </p> -->
 
   <a data-aos="fade-left" href="#progression" class="link-fancy">Learn more about our progression
   </a>
