modify SEL and Ocean Saftey content

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             <p class="text-black-50">Hydration & Sun</p>
             <p class="text-black-50">Anatomy of a Wave</p>
             <p class="text-black-50">Identifying hazard zones</p>
-            <p class="text-black-50">Risk assessment</p>
+            <!-- <p class="text-black-50">Risk assessment</p> -->
            
           </div>
           <div class="col-lg-3" data-aos="fade-up">
@@ -393,7 +393,7 @@
             <p class="text-black-50">Concussion risk assessment</p>
             <p class="text-black-50">Basic Stabilization</p>
             <p class="text-black-50">Emergency Planning</p>
-            <p class="text-black-50">Scenario-based Considerations</p>
+            <!-- <p class="text-black-50">Scenario-based Considerations</p> -->
             <p class="text-black-50">Calling for Help</p>
 
           </div>
