modify schdule icon

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <p>Humboldt County Family focused surf club </p>
       <p>Programs grounded in ocean safety, marine education, social-emotional learning, and cultural connection. </p>
       <p>Harnessing the healing power of the ocean to support the physical, emotional, and social well-being of youth and families.</p>
-      <p>We have a strong commitment to diversity, equity, and inclusion; we aime to make this program avaible to anyone regardless of socio-economic status ensuring equitable access to all.  </p>
+      <p>We have a strong commitment to diversity, equity, and inclusion; our programs are avaible to anyone regardless of socioeconomic status ensuring equitable access to all.  </p>
     </div>
    
   </div>
