modify schdule icon

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
       <p>Programs grounded in ocean safety, marine education, social-emotional learning, and cultural connection. </p>
       <p>Harnessing the healing power of the ocean to support the physical, emotional, and social well-being of youth and families.</p>
       <p>We have a strong commitment to diversity, equity, and inclusion; our programs are avaible to anyone regardless of socioeconomic status ensuring equitable access to all.  </p>
+      <p>Through regular community events and hands-on service projects, beach clean ups, we foster stewardship, strengthen relationships, and inspire collective care for our coastline and each other.</p>
     </div>
    
   </div>
@@ -173,7 +174,7 @@
   <p>We believe lasting impact happens when families and communities learn and grow together.</p>
   <p>Our club invites parents and caregivers to be active partners—whether helping in the water, supporting logistics, or exploring shared learning at home. </p>
   <p>After-school surf programs are 100% volunteer led.</p>
-  <p>Through regular community events and hands-on service projects, beach clean ups, we foster stewardship, strengthen relationships, and inspire collective care for our coastline and each other.</p>
+  <!-- <p>Through regular community events and hands-on service projects, beach clean ups, we foster stewardship, strengthen relationships, and inspire collective care for our coastline and each other.</p> -->
   <!-- <p>We have a strong commitment to diversity, equity, and inclusion; we aime to make this program avaible to anyone regardless of socio-economic status ensuring equitable access to all.  </p> -->
 
 </div>
