modify schdule icon

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <p>Programs grounded in ocean safety, marine education, social-emotional learning, and cultural connection. </p>
       <p>Harnessing the healing power of the ocean to support the physical, emotional, and social well-being of youth and families.</p>
       <p>We have a strong commitment to diversity, equity, and inclusion; our programs are avaible to anyone regardless of socioeconomic status ensuring equitable access to all.  </p>
-      <p>Through regular community events and hands-on service projects, beach clean ups, we foster stewardship, strengthen relationships, and inspire collective care for our coastline and each other.</p>
+      <p>Through regular community events, hands-on service projects and beach clean ups, we foster stewardship, strengthen relationships, and inspire collective care for our coastline and each other.</p>
     </div>
    
   </div>
