modify schdule icon

--- a/main.html
+++ b/main.html
@@ -147,7 +147,7 @@
              
             </p>
             <div>
-              <a class="text-light" href="./index.html" class="link-fancy" style="--bs-text-opacity: .5;">Learn more About Moonstone Family Surf Club </a>
+              <a data-aos="fade-left" class="text-light" href="./index.html" class="link-fancy" style="--bs-text-opacity: .5;">Learn more About Moonstone Family Surf Club </a>
             </div>
             
             <!-- <div>
