modify schdule icon

--- a/index.html
+++ b/index.html
@@ -649,20 +649,19 @@
   <div class="container py-vh-6">
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-lg-10 col-xl-8 text-center">
-  <h2 class="display-6">Loved by people all around the globe</h2>
-  <p class="lead">Our spaces and offices are soooooo lovely, no one would give us a negative rating! And look at these trustworthy avatar pictures! Trust us!</p>
+  <h2 class="display-6">Upcoming and Past Events</h2>
+  <p class="lead">We organize Beach Clean-ups, Community Surf Days, and Service Projects</p>
 </div>
   <div class="row d-flex justify-content-center align-items-center">
     <div class="col-lg-5">
-  <h3 class="py-5 border-top border-dark" data-aos="fade-right">What our clients say</h3>
+  <h3 class="py-5 border-top border-dark" data-aos="fade-right">Beach Clean-Up</h3>
 </div>
 <div class="col-md-7" data-aos="fade-left">
   <blockquote>
-    <div class="fs-4 my-3 fw-light pt-4 border-bottom pb-3">“I´am the CEO of this company. So maybe you think "he will tell us something super awesome about it only". But no. Its a really strange place to work with creepy people all around.
-      They do some computer stuff I don´t understand. But I wear expensive Glasses and a Patagonia Hoodie. So I´am fine with it.”</div>
+    <div class="fs-4 my-3 fw-light pt-4 border-bottom pb-3">Info about Beach Clean-Up</div>
     <img src="img/webp/person11.webp" width="64" height="64" class="img-fluid rounded-circle me-3" alt="" data-aos="fade">
-    <span><span class="fw-bold">John Doe,</span>
-      CEO of Stride Ltd.</span>
+    <span><span class="fw-bold">Date and Location: </span>
+    <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a></span>
   </blockquote>
 </div>
 
@@ -673,15 +672,14 @@
 <div class="container py-vh-4 w-100 overflow-hidden">
   <div class="row d-flex justify-content-center align-items-center">
     <div class="col-lg-5">
-  <h3 class="py-5 border-top border-dark" data-aos="fade-right">What our clients say</h3>
+  <h3 class="py-5 border-top border-dark" data-aos="fade-right">Community Surf Day</h3>
 </div>
 <div class="col-md-7" data-aos="fade-left">
   <blockquote>
-    <div class="fs-4 my-3 fw-light pt-4 border-bottom pb-3">“I´am the CEO of this company. So maybe you think "he will tell us something super awesome about it only". But no. Its a really strange place to work with creepy people all around.
-      They do some computer stuff I don´t understand. But I wear expensive Glasses and a Patagonia Hoodie. So I´am fine with it.”</div>
+    <div class="fs-4 my-3 fw-light pt-4 border-bottom pb-3">Info about Community Surf Day</div>
     <img src="img/webp/person11.webp" width="64" height="64" class="img-fluid rounded-circle me-3" alt="" data-aos="fade">
-    <span><span class="fw-bold">John Doe,</span>
-      CEO of Stride Ltd.</span>
+    <span><span class="fw-bold">Date and Location: </span>
+    <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a></span>
   </blockquote>
 </div>
 
