modify schdule icon

--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
   <div class="container py-vh-6">
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-lg-10 col-xl-8 text-center">
-  <h2 class="display-6">Upcoming and Past Events</h2>
+  <h2 class="display-6">Community Events</h2>
   <p class="lead">We organize Beach Clean-ups, Community Surf Days, and Service Projects</p>
 </div>
   <div class="row d-flex justify-content-center align-items-center">
