modify schdule icon

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-lg-10 col-xl-8 text-center">
   <h2 class="display-6">Community Events</h2>
-  <p class="lead">We organize Beach Clean-ups, Community Surf Days, and Service Projects</p>
+  <p class="lead">It takes a village. Information on Community Events</p>
 </div>
   <div class="row d-flex justify-content-center align-items-center">
     <div class="col-lg-5">
