modify schdule icon

--- a/index.html
+++ b/index.html
@@ -659,10 +659,13 @@
 <div class="col-md-7" data-aos="fade-left">
   <blockquote>
     <div class="fs-4 my-3 fw-light pt-4 border-bottom pb-3">Info about Beach Clean-Up</div>
-    <img src="img/webp/person11.webp" width="64" height="64" class="img-fluid rounded-circle me-3" alt="" data-aos="fade">
+    <img src="./img/add-on/logo.jpeg" width="64" height="64" class="img-fluid rounded-circle me-3" alt="" data-aos="fade">
     <span><span class="fw-bold">Date and Location: </span>
-    <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a></span>
+  </span>
   </blockquote>
+  <div>
+    <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a><
+  </div>
 </div>
 
   </div>
@@ -677,10 +680,13 @@
 <div class="col-md-7" data-aos="fade-left">
   <blockquote>
     <div class="fs-4 my-3 fw-light pt-4 border-bottom pb-3">Info about Community Surf Day</div>
-    <img src="img/webp/person11.webp" width="64" height="64" class="img-fluid rounded-circle me-3" alt="" data-aos="fade">
+    <img src="./img/add-on/logo.jpeg" width="64" height="64" class="img-fluid rounded-circle me-3" alt="" data-aos="fade">
     <span><span class="fw-bold">Date and Location: </span>
-    <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a></span>
+    </span>
   </blockquote>
+  <div>
+    <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a><
+  </div>
 </div>
 
   </div>
