modify schdule icon

--- a/index.html
+++ b/index.html
@@ -663,9 +663,10 @@
     <span><span class="fw-bold">Date and Location: </span>
   </span>
   </blockquote>
-  <div>
-    <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a><
-  </div>
+  
+</div>
+<div>
+  <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a><
 </div>
 
   </div>
@@ -684,9 +685,10 @@
     <span><span class="fw-bold">Date and Location: </span>
     </span>
   </blockquote>
-  <div>
-    <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a><
-  </div>
+  
+</div>
+<div>
+  <a  href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a><
 </div>
 
   </div>
