modify schdule icon

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
   
 </div>
 <div>
-  <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a><
+  <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a>
 </div>
 
   </div>
@@ -714,7 +714,7 @@
   
 </div>
 <div>
-  <a  href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a><
+  <a  href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a>
 </div>
 
   </div>
