add border for clean up days

--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
 <div class="col-lg-4">
   <h3 class="py-5 border-top border-dark" data-aos="fade-left">Afterschool Surf Club
   </h3>
-  <p data-aos="fade-left" data-aos-delay="200">We run a regular parent supported afterschool youth surf club.
+  <p data-aos="fade-left" data-aos-delay="200">We run a regular coach supported afterschool youth surf club.
 
   </p>
 
-  <p data-aos="fade-left" data-aos-delay="200">We encourage a Weekly 'General Community' surf event.
+  <p data-aos="fade-left" data-aos-delay="200">We encourage a monthly 'General Community' surf event.
 
   </p>
 
@@ -228,7 +228,7 @@
   <p data-aos="fade-left" data-aos-delay="200">Bi-Weekly Sessions; 3:30pm - 6pm at Moonstone Beach
 
   </p>
-  <p data-aos="fade-left" data-aos-delay="200">Cohorts launch Mid March & Mid August and run for ~12 weeks
+  <p data-aos="fade-left" data-aos-delay="200">Cohorts launch Mid April & Mid August and run for ~12 weeks
 
   </p>
   <h3 class="py-5 border-top border-dark" data-aos="fade-left">Surf School at Home
@@ -239,7 +239,7 @@
   </p>
 
   <p data-aos="fade-left" data-aos-delay="200">Concepts are introduced at home for discussion and exploration and then reviewed on the beach before putting those skills to use. 
-    Content should be completed each week. 
+    Content should be completed each week with parent / caregiver. 
   </p>
 
   <!-- <p data-aos="fade-left" data-aos-delay="200">Content should be completed each week. 
@@ -645,7 +645,7 @@
 
 <!-- Lead Event Content goes here -->
 
-<div class="container py-vh-4 w-100 overflow-hidden">
+<div class="container py-vh-4 w-100 overflow-hidden border-top border-dark">
   <div class="container py-vh-6">
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-lg-10 col-xl-8 text-center">
