modify cpan button

--- a/index.html
+++ b/index.html
@@ -669,13 +669,13 @@
         <p>In addition to cleaning, we end each event with a short reflection circle or ocean science activity, connecting our efforts to larger environmental stewardship goals. Through shared service and community connection, we build a deeper appreciation for the beaches that sustain both people and wildlife.</p>
     </div>
     <img src="./img/add-on/logo.jpeg" width="64" height="64" class="img-fluid rounded-circle me-3" alt="" data-aos="fade">
-    <span><span class="fw-bold">Date and Location: </span>
-  </span>
+    <span class="fw-bold">Date and Location: </span>
+    <a  href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a>
   </blockquote>
   
 </div>
 <div>
-  <a data-aos="fade-left" href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a>
+  
 </div>
 
   </div>
@@ -700,13 +700,14 @@
           <p>Community Surf Day isn’t a competition—it’s a celebration of ocean joy, shared learning, and the belief that the sea belongs to everyone. Whether you’re catching your first wave or your hundredth, you’ll leave with sandy feet, new friends, and a deeper love for the coast we call home.</p>
     </div>
     <img src="./img/add-on/logo.jpeg" width="64" height="64" class="img-fluid rounded-circle me-3" alt="" data-aos="fade">
-    <span><span class="fw-bold">Date and Location: </span>
-    </span>
+    <span class="fw-bold">Date and Location: </span>
+   
+    <a  href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a>
   </blockquote>
   
 </div>
 <div>
-  <a  href="#" class="btn btn-light btn-xl shadow me-3 rounded-0 my-5">Learn More</a>
+ 
 </div>
 
   </div>
