modify border for community event

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 </div>
 
 <!-- Another Event -->
-<div class="container py-vh-4 w-100 overflow-hidden">
+<div class="container py-vh-4 w-100 overflow-hidden border-top border-dark">
   <div class="row d-flex justify-content-center align-items-center">
     <div class="col-lg-5">
   <h3 class="py-5 border-top border-dark" data-aos="fade-right">Community Surf Day</h3>
