modify media query to have black stroke around white text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
        url('./fonts/inter-v12-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 @media (max-width: 991px) {
-  .white-intro {color: white; }
+  .white-intro {color: white; 
+  -webkit-text-stroke-width: 1px; /* Set the outline thickness */
+  -webkit-text-stroke-color: #000000; /* Set the outline color */ 
+  };
 }
 </style>
 
