modify media query to have black stroke around white text

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
 }
 @media (max-width: 991px) {
   .white-intro {color: white; 
-  -webkit-text-stroke-width: 1px; /* Set the outline thickness */
-  -webkit-text-stroke-color: #000000; /* Set the outline color */ 
+  /* -webkit-text-stroke-width: 1px; 
+  Set the outline thickness */
+  /* -webkit-text-stroke-color: #000000;  */
+  /* Set the outline color */ 
   };
 }
 </style>
