modify media query to have black stroke around white text

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <nav id="navScroll" class="navbar navbar-expand-lg navbar-light fixed-top" tabindex="0">
   <div class="container">
     <a class="navbar-brand pe-4 fs-4" href="/">
-      <img src="./img/add-on/logo.jpeg" alt="Girl in a jacket" width="45" height="45">
+      <img src="./img/add-on/logo.jpeg" alt="Moonstone Family Surf Club" width="45" height="45">
       <span class="ms-1 fw-bolder">Moonstone Family Surf Club</span>
   </a>
 
