--- a/main.html
+++ b/main.html
@@ -183,7 +183,7 @@
             <p class="  text-light" style="--bs-text-opacity: .5;">Through structured sessions, young surfers explore:
               </p>
               <ul>
-                <li class="text-light" style="--bs-text-opacity: .5;">Taking on a leadership role by working with and supporting the Local Family Surf Clubs and their Younger Learners</li>
+                <li class="text-light" style="--bs-text-opacity: .5;">Taking on a leadership role by working with and supporting the Local Family Surf Clubs and their Younger Learnersf</li>
                 <li class="text-light" style="--bs-text-opacity: .5;">Advanced surf techniques and wave reading</li>
                 <li class="text-light" style="--bs-text-opacity: .5;">Ocean safety, awareness, and environmental responsibility</li>
                 <li class="text-light" style="--bs-text-opacity: .5;">Teamwork, leadership, and goal-setting</li>
@@ -240,6 +240,7 @@
       <h3 class="h6 mb-3 mt-3">Surf Clubs</h3>
       <ul class="nav flex-column">
         <li class="nav-item">
+          <img src="./img/add-on/logo.jpeg" alt="Moonstone Family Surf Club" width="100" height="100">
           <a class="nav-link link-secondary ps-0" aria-current="page" href="./index.html">Moonstone Family Surf Club</a>
         </li>
       
