modify media query to have black stroke around white text

--- a/main.html
+++ b/main.html
@@ -168,7 +168,8 @@
         Moonbeam Surf Club → creative exploration (optional parallel track) -->
         <div class="row d-flex align-items-center px-5">
           <div class="col-12 col-lg-5 text-end d-flex justify-content-end">
-            <h2 class="border-bottom border-light pb-4 text-end me-5">Rising Tide Surf Clubs</h2>
+            <h2 class="border-bottom border-light pb-4 text-end me-5">Rising Tide</h2>
+            <h2 class="border-bottom border-light pb-4 text-end me-5">Surf Clubs</h2>
           </div>
           <div class="col-12 col-lg-7">
        
