--- a/main.html
+++ b/main.html
@@ -168,7 +168,7 @@
         Moonbeam Surf Club → creative exploration (optional parallel track) -->
         <div class="row d-flex align-items-center px-5">
           <div class="col-12 col-lg-5 d-flex justify-content-end">
-            <h2 class=" pb-4  ">Rising Tide Surf Clubs</h2>
+            <h2 class=" pb-4 border-bottom border-light  ">Rising Tide Surf Clubs</h2>
             <!-- <h2 class="border-bottom border-light pb-4 text-end me-5">Surf Clubs</h2> -->
           </div>
           <div class="col-12 col-lg-7">
