modify media query to have black stroke around white text

--- a/main.html
+++ b/main.html
@@ -243,7 +243,7 @@
       <h3 class="h6 mb-3 mt-3">Surf Clubs</h3>
       <ul class="nav flex-column">
         <li class="nav-item">
-          <img src="./img/add-on/logo.jpeg" alt="Moonstone Family Surf Club" width="45" height="45">
+          <!-- <img src="./img/add-on/logo.jpeg" alt="Moonstone Family Surf Club" width="45" height="45"> -->
           <a class="nav-link link-secondary ps-0" aria-current="page" href="./index.html">Moonstone Family Surf Club</a>
         </li>
       
