remove at home study portion

--- a/index.html
+++ b/index.html
@@ -233,10 +233,11 @@
   <p data-aos="fade-left" data-aos-delay="200">Bi-Weekly Sessions; 3:30pm - 6pm at Moonstone Beach
 
   </p>
-  <p data-aos="fade-left" data-aos-delay="200">Cohorts launch Mid April & Mid August and run for ~12 weeks
+  <p data-aos="fade-left" data-aos-delay="200">Cohorts launch Mid March & Mid August and run for ~12 weeks
 
   </p>
-  <h3 class="py-5 border-top border-dark" data-aos="fade-left">Surf School at Home
+  <!-- online course -->
+  <!-- <h3 class="py-5 border-top border-dark" data-aos="fade-left">Surf School at Home
   </h3>
 
   <p data-aos="fade-left" data-aos-delay="200">Reversed classroom study with a 12 weeks of surf, ocean safety and environmental stewardship, cultural learning, and self-regulation curiculum. 
@@ -245,7 +246,7 @@
 
   <p data-aos="fade-left" data-aos-delay="200">Concepts are introduced at home for discussion and exploration and then reviewed on the beach before putting those skills to use. 
     Content should be completed each week with parent / caregiver. 
-  </p>
+  </p> -->
 
   <!-- <p data-aos="fade-left" data-aos-delay="200">Content should be completed each week. 
 
