--- a/index.html
+++ b/index.html
@@ -800,7 +800,8 @@
   </div>
 </div>
 
-<div class="bg-light w-100 overflow-hidden" id="coaches">
+<!-- Start Volunteer Coach Team -->
+<!-- <div class="bg-light w-100 overflow-hidden" id="coaches">
   <div class="container py-vh-6">
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-lg-10 col-xl-8 text-center">
@@ -810,7 +811,7 @@
 <div class="col-12 mt-4">
   <div class="row row-cols-1 row-cols-md-2 g-5 d-flex align-items-center">
     
-    <!-- start card -->
+
     <div class="col-12 col-lg-6 col-xl-4" data-aos="fade-right">
       <div class="card p-4 shadow mt-3 border-0">
         <div class="card-body">
@@ -831,8 +832,7 @@
         </div>
       </div>
     </div>
-    <!-- end card -->
-    <!-- start card -->
+
     <div class="col-12 col-lg-6 col-xl-4">
       <div class="card p-4 shadow mt-3 border-0" data-aos="fade-down">
         <div class="card-body">
@@ -849,8 +849,7 @@
         </div>
       </div>
     </div>
-    <!-- end card -->
-    <!-- start card -->
+
     <div class="col-12 col-lg-6 col-xl-4">
       <div class="card p-4 shadow mt-3 border-0" data-aos="fade-left">
         <div class="card-body">
@@ -987,9 +986,9 @@
 
     </div>
   </div>
-</div>
+</div> -->
 
-
+<!-- End Volunteer Coach Team -->
 
 <div class="container py-vh-3 border-top" data-aos="fade" data-aos-delay="200">
   <div class="row d-flex justify-content-center">
