--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
       Contact
     </a>
   </li>
-  <li class="nav-item">
+  <!-- <li class="nav-item">
     <a class="nav-link" href="#coaches">
       Coaches
     </a>
-  </li>
+  </li> -->
 
    
 
