--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
     </ul>
   </ul>
 </div>
-<div class="col-12 col-lg-6 col-xl-3 border-end p-5">
+<!-- <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
   <h3 class="h6 mb-3">Sponsors</h3>
   <ul class="nav flex-column">
     <li class="nav-item">
@@ -1070,7 +1070,7 @@
       <a class="nav-link link-secondary ps-0" href="#">Sponsor</a>
     </li>
   </ul>
-</div>
+</div> -->
 <div class="col-12 col-lg-6 col-xl-3 p-5">
   <h3 class="h6 mb-3">Social Media</h3>
   <ul class="nav flex-column">
