--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
 
 <!-- Lead Event Content goes here -->
 
-<div class="container py-vh-4 w-100 overflow-hidden border-top border-dark">
+<!-- <div class="container py-vh-4 w-100 overflow-hidden border-top border-dark">
   <div class="container py-vh-6">
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-lg-10 col-xl-8 text-center">
@@ -684,10 +684,10 @@
 </div>
 
   </div>
-</div>
+</div> -->
 
 <!-- Another Event -->
-<div class="container py-vh-4 w-100 overflow-hidden border-top border-dark">
+<!-- <div class="container py-vh-4 w-100 overflow-hidden border-top border-dark">
   <div class="row d-flex justify-content-center align-items-center">
     <div class="col-lg-5">
   <h3 class="py-5 border-top border-dark" data-aos="fade-right">Community Surf Day</h3>
@@ -717,7 +717,7 @@
 </div>
 
   </div>
-</div>
+</div> -->
 
 
 <!-- start Sponsors -->
@@ -990,7 +990,7 @@
 
 <!-- End Volunteer Coach Team -->
 
-<div class="container py-vh-3 border-top" data-aos="fade" data-aos-delay="200">
+<!-- <div class="container py-vh-3 border-top" data-aos="fade" data-aos-delay="200">
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-8 text-center">
       <h3 class="fs-2 fw-light">Stay in touch with our<span class="fw-bold">
@@ -1016,7 +1016,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
     </main>
 
@@ -1050,7 +1050,7 @@
     </ul>
   </ul>
 </div>
-<!-- <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
+<div class="col-12 col-lg-6 col-xl-3 border-end p-5">
   <h3 class="h6 mb-3">Sponsors</h3>
   <ul class="nav flex-column">
     <li class="nav-item">
@@ -1070,7 +1070,7 @@
       <a class="nav-link link-secondary ps-0" href="#">Sponsor</a>
     </li>
   </ul>
-</div> -->
+</div>
 <div class="col-12 col-lg-6 col-xl-3 p-5">
   <h3 class="h6 mb-3">Social Media</h3>
   <ul class="nav flex-column">
